page: Store FaceController cache in QPointer

To make sure that we track deletion of FaceControllers if they get
destroyed.

BUG: 482198